# tekken-scoreboard

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  data.json  package.json
backend/: bootstrap.js  database.js  index.js  models.js  package.json  schema.js
backend/src/: bootstrap.js  database.js  index.js  models.js  schema.js
elm_frontend/src/: index.js
flow-typed/npm/: babel-cli_vx.x.x.js  babel-preset-env_vx.x.x.js  babel_vx.x.x.js  bootstrap_vx.x.x.js  classnames_v2.x.x.js  express_v4.x.x.js  flow-typed_vx.x.x.js  flux-standard-action_v1.x.x.js  lodash_v4.x.x.js  morgan_vx.x.x.js  pg_v6.x.x.js  react-bootstrap_vx.x.x.js  react-redux_v5.x.x.js  react-scripts_vx.x.x.js  redux-actions_vx.x.x.js  redux-immutable_vx.x.x.js  redux_v3.x.x.js  sequelize_vx.x.x.js
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  actions.js  apolloClient.js  index.js  models.js  store.js
frontend/src/components/: CharacterFormGroup.js  CreateMatchForm.js  CreateSetForm.js  EloTable.js  MatchList.js  PlayerFormGroup.js  PlayerList.js  SetList.js  WinnerFormGroup.js
frontend/src/queries/: CreateMatchFormQuery.js  EloTableQuery.js  MatchListQuery.js  PlayerListQuery.js
frontend/src/reducers/: characters.js  matches.js  players.js  sets.js
frontend/src/utils/: elo.js  sort.js
rust_backend/: Cargo.toml
rust_backend/migrations/20170611040620_create_characters_matches_players/: down.sql  up.sql
rust_backend/migrations/20170611053003_no_nulls_in_db/: down.sql  up.sql
rust_backend/src/: db.rs  elo.rs  main.rs  model.rs  utils.rs
rust_backend/src/db/: mod.rs  models.rs  pool.rs  schema.rs
rust_backend/src/schema/: context.rs  mod.rs  model.rs  mutation.rs  object.rs  query.rs  scalar.rs
