[package]
name = "tekken_scorecard_backend"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]

[dependencies]
iron = "0.5"
mount = "*"
logger = "*"
env_logger = "0.4.2"
juniper = { version = "0.7.0", features = ["iron-handlers"] }
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
chrono = "0.3"
persistent = "*"
r2d2 = "*"
iron-cors = { git = "https://github.com/fxbox/iron-cors.git" }
md5 = "*"
diesel = { version = "0.13", features = ["postgres", "uuid", "chrono"] }
diesel_codegen = { version = "0.13", features = ["postgres"] }
r2d2-diesel = "0.13"
dotenv = "0.9"
itertools = "0.6"